welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    if (isFacingtrail()) {
    	avance()
    	baisseBrosse()
    	leveBrosse()
    }
    else {
    	droite()
    	if (isFacingtrail()) {
    		avance()
    		baisseBrosse()
    		leveBrosse()
    	}
    	else {
    		droite()
    		droite()
    	}
    }
}

def isFacingTrail():Boolean = {
	var sol: Boolean = false;
	if (!estFaceMur()) {
		avance()
		if (getCouleurSol() == Color.green) {
			recule()
			sol = true;
		}
		else {recule()}
	}
	return sol
}
